--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 				<div class="navbar u-clearfix">
 					<div class="logo navbar__logo">
 						<div class="logo__title">Website Title</div>
-						<a href="#" class="logo__image"></a>
+						<a href="#popup-menu" class="logo__image"></a>
 					</div>
 					<div class="nav navbar__nav">
-						<a href="#" class="menu-toggle">
+						<a href="#popup-menu" class="menu-toggle">
 							<span></span>
 							<span></span>
 							<span></span>
 						</a>
-						<ul class="menu menu--horizontal u-clearfix responsive-popup">
+						<ul id="popup-menu"class="menu menu--horizontal u-clearfix responsive-popup">
+							<a href="#" class="popup-menu__close">
+								<span></span>
+								<span></span>
+							</a>							
 							<li><a class="menu__item" href="#">Item 1</a></li>
 							<li><a class="menu__item" href="#">Item 2</a></li>
 							<li><a class="menu__item" href="#">Item 3</a></li>
@@ -45,6 +49,7 @@
 				</div>
 			</div>
 			<!-- End Welcome Message -->
+
 			<!-- Start Section -->
 			<div class="section">
 				<div class="container">
