--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<span></span>
 						</a>
 						<ul id="popup-menu"class="menu menu--horizontal u-clearfix responsive-popup">
-							<a href="#" class="popup-menu__close">
+							<a href="#!" class="popup-menu__close">
 								<span></span>
 								<span></span>
 							</a>							
@@ -56,18 +56,18 @@
 					<h2 class="u-text-center titlePadding">Section Title</h2>
 					<div class="row">
 						<div class="col-1-2">
-							<div class="contentbox bg-color-deep-blue u-text-center u-margin-8 u-padding-bt-120">Content Box 1</div>
+							<div class="contentbox bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120">Content Box 1</div>
 						</div>
 						<div class="col-1-2">
-							<div class="contentbox bg-color-deep-blue u-text-center u-margin-8 u-padding-bt-120">Content Box 2</div>
+							<div class="contentbox bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120">Content Box 2</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-1-2">
-							<div class="contentbox bg-color-deep-blue u-text-center u-margin-8 u-padding-bt-120">Content Box 3</div>
+							<div class="contentbox bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120">Content Box 3</div>
 						</div>
 						<div class="col-1-2">
-							<div class="contentbox bg-color-deep-blue u-text-center u-margin-8 u-padding-bt-120">Content Box 4</div>
+							<div class="contentbox bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120">Content Box 4</div>
 						</div>
 					</div>
 				</div>
