Optimize welcome-text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<!-- Start Welcome Message -->
 			<div class="welcome givePadding bg-color-blue">
 				<div class="container">
-					<h1 class="u-text-center">Welcome Message</h1>
+					<h1 class="u-text-center welcome-text">Welcome Message</h1>
 				</div>
 			</div>
 			<!-- End Welcome Message -->
@@ -73,9 +73,11 @@
 				</div>
 			</div>
 			<!-- End Section-->
-			<!-- Start Button -->
-			<div class="button">
-				
+			<!-- Start CallButton -->
+			<div class="callbutton">
+				<div class="container">
+					<div class="u-text-center  titlePadding">button</div>
+				</div>
 			</div>
 			<!-- End Button -->
 		</section>
