--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="callbutton">
 				<div class="container">
 					<div class="u-text-center  titlePadding">
-						<a href="#" class="btn">Call to Action</a>
+						<a href="#" class="btn btn--lg">Call to Action</a>
 					
 					</div>
 				</div>
