--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="navbar u-clearfix">
 					<div class="logo navbar__logo">
 						<div class="logo__title">Website Title</div>
-						<a href="#" class="logo__image"></a>
+						<a href="#" class="logo__image u-shadow-minor"></a>
 					</div>
 					<div class="nav navbar__nav">
 						<a href="#popup-menu" class="menu-toggle">
@@ -56,18 +56,18 @@
 					<h2 class="u-text-center titlePadding">Section Title</h2>
 					<div class="row">
 						<div class="col-1-2">
-							<div class="contentbox bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120 u-padding-tp-8 ">Content Box 1</div>
+							<div class="contentbox u-shadow bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120 u-padding-tp-8 ">Content Box 1</div>
 						</div>
 						<div class="col-1-2">
-							<div class="contentbox bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120 u-padding-tp-8 ">Content Box 2</div>
+							<div class="contentbox u-shadow bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120 u-padding-tp-8 ">Content Box 2</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-1-2">
-							<div class="contentbox bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120 u-padding-tp-8 ">Content Box 3</div>
+							<div class="contentbox u-shadow bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120 u-padding-tp-8 ">Content Box 3</div>
 						</div>
 						<div class="col-1-2">
-							<div class="contentbox bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120 u-padding-tp-8 ">Content Box 4</div>
+							<div class="contentbox u-shadow bg-color-deep-blue u-text-center u-margin-16 u-padding-bt-120 u-padding-tp-8 ">Content Box 4</div>
 						</div>
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 			<div class="callbutton">
 				<div class="container">
 					<div class="u-text-center  titlePadding">
-						<a href="#" class="btn btn--lg">Call to Action</a>
+						<a href="#" class="btn btn--lg u-shadow-minor">Call to Action</a>
 					
 					</div>
 				</div>
