--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="navbar u-clearfix">
 					<div class="logo navbar__logo">
 						<div class="logo__title">Website Title</div>
-						<a href="#" class="logo__image u-shadow-minor"></a>
+						<a class="logo__image u-shadow-minor"></a>
 					</div>
 					<div class="nav navbar__nav">
 						<a href="#popup-menu" class="menu-toggle">
